--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <body class="antialiased">
 
     <!-- Hero -->
-    <section class="min-h-screen flex flex-col justify-between hero-gradient">
+    <section class="hero-gradient">
         <div class="px-8 py-0 md:px-24">
             <div class="logo-container mb-20 shadow-lg">
                 <img src="https://redek.co/images/Recurso-4-p-500.png" alt="Redek Logo" class="h-10">
