--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                         </div>
                         <div class="p-8 bg-mckinsey-blue rounded-xl relative overflow-hidden shadow-xl">
                             <div class="absolute top-4 right-4 bg-redek-accent text-white text-[10px] px-2 py-1 rounded font-bold uppercase tracking-widest">Descuento Anual</div>
-                            <h4 class="font-bold text-xs uppercase tracking-widest text-slate-300 mb-2">Pago Anual Anticipado</h4>
+                            <h4 class="font-bold text-xs uppercase tracking-widest text-slate-300 mb-2">Pago Anual</h4>
                             <p class="text-3xl font-extrabold text-white mb-1">$ 14.500.000</p>
                             <p class="text-xs text-slate-400 font-medium italic">COP / año</p>
                             <div class="mt-4 pt-4 border-t border-slate-700 text-[11px] text-slate-400">
